--- a/cmake/akerror.cmake.in
+++ b/cmake/akerror.cmake.in
@@ -2,4 +2,4 @@
 include(CMakeFindDependencyMacro) # If your library has dependencies
 # find_dependency(AnotherDependency REQUIRED) # Example dependency
 
-include("${CMAKE_CURRENT_LIST_DIR}/sdlerror.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/akerror.cmake")
